--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -2,7 +2,7 @@
 
 The need to test compilers under invalid and unexpected input conditions has been long known~\cite{Boujarwah1997}.
 
-Formative work in '98~\cite{McKeeman1998}, which includes testing with random ASCII strings. \citeauthor{McKeeman1998} use a lexeme generator to test C compilers by enumerating token sequences in~\cite{McKeeman1998}. Basically the same as DeepSmith, except we weight the generation so that sequences are plausible.
+\citeauthor{McKeeman1998} a lexeme generator and to test C compilers by enumerating token sequences in~\cite{McKeeman1998}. Basically the same as DeepSmith, except we weight the generation so that sequences are plausible.
 
 Increasing complexity of generations: RandProg to CSmith. Then EMI testing, and SPE.
 
