--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -1,5 +1,7 @@
 \section{Related Work}\label{sec:rw}
 
+\paragraph{Test Case Generation}
+
 The need to test compilers under invalid and unexpected input conditions has been long known~\cite{Boujarwah1997}.
 
 Differential testing using test cases of ranked ``quality'' is presented in~\cite{McKeeman1998}. A lexeme generator and to test C compilers by enumerating token sequences. Similar to DeepSmith, except we weight the generation so that sequences are plausible.
@@ -28,15 +30,18 @@ Both tools require test-case reduction (\cite{Regehr2012a} and~\cite{Pflanzer201
 
 \cc{TODO:}
 
-GPU Concurrency --- Small \emph{litmus tests}~\cite{Alglave2015}.
+EMI testing~\cite{Le2013a}, Skeletal Program enumeration~\cite{Zhang2017a}.
 
 A mutation-based approach for the Java Virtual Machine is demonstrated in~\cite{Chena}.
 
 TODO~\cite{White2016}.
 
+\paragraph{GPU Testing} GPU Concurrency --- Small \emph{litmus tests}~\cite{Alglave2015}.
+
+
+\paragraph{Machine Learning} Deep Learning is a nascent field that is responsible for a multitude of breakthroughs in modeling rich, hierarchical datasets. The major milestones are reviewed in~\cite{Wang2017}, and methods in~\cite{Schmidhuber2014}.
+
 MACHINE LEARNING FOR TESTING: Machine learning selectively unsound static analysis~\cite{Heo2017}, Learning a classifier for static analyzers~\cite{Koc2017}.
 Transforming program repair ingredients with DL~\cite{White}. Program repair~\cite{Koukoutos2017a}. Learning to prioritize test programs~\cite{Chen2017}. Attention network to identify buffer overruns~\cite{Choi2016}. Localizing bugs from bug reports~\cite{Lam2016,Huo2016}.
-
-Deep Learning is a nascent field that is responsible for a multitude of breakthroughs in modeling rich, hierarchical datasets. The major milestones are reviewed in~\cite{Wang2017}, and methods in~\cite{Schmidhuber2014}.
 
 There is an increasing interest in mining source code repositories at large scale~\cite{Allamanis2013a,White2015a,Bird2009}. Previous studies have involved data mining of GitHub to analyze software engineering practices~\cite{Wu2014,Guzman2014,Baishakhi2014a,Vasilescu2015}, for example code generation~\cite{Zhang2015a}, code summarization~\cite{Allamanis2016}, comment generation~\cite{Wong2013}, and code completion~\cite{Raychev2014}. Previous applications of deep learning to compilers have involved program synthesis for performance benchmarking~\cite{Cummins2017a} and building optimization heuristics~\cite{Cummins2017b}. No work so far has exploited mined source code for test-case generation. This work is the first to do so.
