--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -4,7 +4,7 @@ In this section we compare DeepSmith to CLSmith~\cite{Lidbury2015a}, the state-o
 
 \subsection{Experimental Setup}
 
-We ran each program generator using its default configuration for 48 hours on each of the 10 OpenCL configurations of Table~\ref{tab:platforms}. We ran the tests twice, first with optimizations disabled ($-$), then with optimizations enabled ($+$). Total runtime for a test-case consists of the generation time, and the time to execute the test-case. For DeepSmith, the time to generate test-harness is included.
+We ran each program generator using its default configuration for 48 hours on each of the 10 testbeds of Table~\ref{tab:platforms}. We ran the tests twice, first with optimizations disabled ($-$), then with optimizations enabled ($+$). Total runtime for a test-case consists of the generation time, and the time to execute the test-case. For DeepSmith, the time to generate test-harness is included.
 
 
 \subsection{Results Overview}
@@ -14,7 +14,7 @@ We ran each program generator using its default configuration for 48 hours on ea
   \centering %
   \input{build/tab/outcomes}
   \caption{%
-    Results from 48 hours of testing using CLSmith and DeepSmith. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.%
+    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.%
   }
   \label{tab:outcomes}
 \end{table*}
@@ -23,25 +23,25 @@ Table~\ref{tab:outcomes} shows the outcomes of 48 hours of consecutive testing f
 
 An average of XX CLSmith and XX DeepSmith test-cases were evaluated on each device, with an average time per test-case of XX and XX respectively. The XX-fold increase in testing throughput achieved by DeepSmith is a result of XXX. Figure~\ref{fig:runtimes} shows the times taken to generate and execute test-cases. DeepSmith generation time is proportional to program length, benchmarked at an average 465 chars / second. For Clsmith, generation time depends on the number of rejections which are required before production of statically verified code is correct \cc{ldots}.
 
-Optimization level generally does not affect testing throughput significantly, with the exception of Config.\ $7+$, in which the slow compilation of kernels containing structs greatly reduces the number of test-cases evaluated. This is a result of CLSmith's heavy reliance on structs, and is a known issue --- in XX the authors omnit testing on this configuration for this reason.
+Optimization level generally does not affect testing throughput significantly, with the exception of testbed $7+$, in which the slow compilation of kernels containing structs greatly reduces the number of test-cases evaluated. This is a result of CLSmith's heavy reliance on structs, and is a known issue --- in XX the authors omnit testing on this testbed for this reason.
 
 83.8\% of CLSmith test-cases produce a majority \textbf{\cmark} outcome. Proportionally, DeepSmith test-cases are less likely to produce a majority outcome at 47.9\% of the total. Neither CLSmith or DeepTune guarantee program termination with XX\% of non-\textbf{\{bf,c\}} majority outcomes reaching 60 seconds timeouts.
 
 
 \subsection{Comparison of Results}
 
-CLSmith crashed 8 of the 20 configurations, DeepSmith crashed all of them. See Section X for examples of bugs found from build crashes.
+CLSmith crashed 8 of the 20 compilers, DeepSmith crashed all of them. See Section X for examples of bugs found from build crashes.
 
-For all except configuration $3\pm$, DeepSmith exposes more compiler crashes than CLSmith. On average, DeepSmith hangs the compiler more frequently. \cc{\ldots}
+For all except testbed $3\pm$, DeepSmith exposes more compiler crashes than CLSmith. On average, DeepSmith hangs the compiler more frequently. \cc{\ldots}
 
 The integrated GPU Conifgs.\ we tested ($3\pm$) frequently failed to compile CLSmith kernels, resulting in thousands of compiler crashes \textbf{bc} or timeouts \textbf{bc}.
 % SELECT stderr,COUNT(*) FROM CLSmithResults LEFT JOIN CLSmithMetas ON CLSmithResults.id=CLSmithMetas.id WHERE testbed_id=13 AND CLSmithResults.outcome='bc' AND cumtime < 48 * 3600 GROUP BY CLSmithResults.stderr;
 Of the build crashes, 68\% failed silently, and the remainder were caused by the same pointer assignment assertion for which DeepSmith generated a 4 line test-case in Figure~\ref{lst:intel-llvm-assertion}. \cc{We also generated silent build crashes, but with an average line count of XX, versus CLSmith's line count of XX.}
 
 % 622 total bc
-Configs.\ $4$, $5$, $6$, and $7$ have a number CLSmith bc outcomes when optimizations are enabled. Of the non-silent crashes, the cause is the OpenCL vectorizer pass, same as Figure~\ref{lst:intel-vectorizer-segfault}.
+Testbeds $4$, $5$, $6$, and $7$ have a number CLSmith bc outcomes when optimizations are enabled. Of the non-silent crashes, the cause is the OpenCL vectorizer pass, same as Figure~\ref{lst:intel-vectorizer-segfault}.
 
-\cc{Configs.\ $4$, $6$ are the same driver on different hardware, and exhibit similar behavior}
+\cc{Testbeds $4$, $6$ are the same driver on different hardware, and exhibit similar behavior}
 
 
 \subsection{Differential Tests}
@@ -70,12 +70,12 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 	\label{tab:classifications}
 \end{table*}
 
-The 2357 \textbf{abf} results for CLSmith on Configs.\ $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. This is a known CLSmith issue which will likely be addressed.
+The 2357 \textbf{abf} results for CLSmith on Testbeds $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. This is a known CLSmith issue which will likely be addressed.
 % https://github.com/ChrisLidbury/CLSmith/issues/7
-Similarly, Intel Configs.\ 4--7 (but not 3) reject DeepSmith kernels which omit a type specified (e.g. \texttt{\_\_global* a}), whereas all other Configs.\ (including 3) emit and warning and default to \texttt{int} type.
+Similarly, Intel Testbeds 4--7 (but not 3) reject DeepSmith kernels which omit a type specified (e.g. \texttt{\_\_global* a}), whereas all other Testbeds (including 3) emit and warning and default to \texttt{int} type.
 
 % Anomalous build failures
-Configs.\ $1\pm$, $2\pm$ reject kernels which \texttt{size\_t} parameters.
+Testbeds $1\pm$, $2\pm$ reject kernels which \texttt{size\_t} parameters.
 
 
 \subsection{Comparison of Test-cases}
@@ -156,11 +156,11 @@ Over the course of testing, a combined $3.39 \times 10^8$ of CLSmith code was ev
 
 \begin{figure}
   \centering %
-  \subfloat[Configs.\ $3\pm$ assertion during code generation for pointer assignment.]{%
+  \subfloat[Testbeds $3\pm$ assertion during code generation for pointer assignment.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelPtrAssertion}}}%
     \label{lst:intel-ptr-assertion}
   }\\%
-  \subfloat[Configs.\ $3\pm$ assertion in scalar type code generation.]{%
+  \subfloat[Testbeds $3\pm$ assertion in scalar type code generation.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelScalarAssertion}}}%
     \label{lst:intel-scalar-assertion}
   }\\%
@@ -201,7 +201,7 @@ The CLSmith kernels which triggered the two assertions were on average 1411 and 
 %LEFT JOIN Configurations ON results.testbed_id = Configurations.id
 %INNER JOIN CLgenAssertions assertions ON results.stderr_id = assertions.id
 %WHERE assertion = 'ASSERTION FAILED: srcType != ir::TYPE_U64';
-We were able to trigger the assertion \emph{srcType != ir::TYPE\_U64} in Configs.\ $3\pm$ with only a 3 line test-case.
+We were able to trigger the assertion \emph{srcType != ir::TYPE\_U64} in Testbeds $3\pm$ with only a 3 line test-case.
 %
 DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct test cases, CLSmith triggered 0.
 
