--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -1647,12 +1647,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_outcomes_df_for_source(s: session_t, tables: Tableset, time_limit: int):\n",
+    "    q = s.execute(f\"\"\"\n",
+    "SELECT num, device, optimizations, outcome, COUNT(*)\n",
+    "FROM {tables.results.__tablename__} results\n",
+    "INNER JOIN {tables.meta.__tablename__} meta ON results.id = meta.id\n",
+    "INNER JOIN {tables.testcases.__tablename__} testcases ON results.testcase_id = testcases.id\n",
+    "INNER JOIN {tables.params.__tablename__} params ON testcases.params_id = params.id\n",
+    "INNER JOIN Configurations ON results.testbed_id = Configurations.id\n",
+    "INNER JOIN Testbeds ON results.testbed_id = Testbeds.id\n",
+    "WHERE cumtime < {time_limit}\n",
+    "GROUP BY num, device, outcome, optimizations\n",
+    "ORDER BY num, outcome, optimizations;\n",
+    "\"\"\")\n",
+    "    return pd.DataFrame([[tables.name] + list(row) for row in q], \n",
+    "                        columns=[\"source\", \"num\", \"device\", \"optimizations\", \"outcome\", \"count\"])\n",
+    "\n",
+    "def get_outcomes_df(s: session_t, time_limit: int):\n",
+    "    clsmith_table = get_outcomes_df_for_source(s, CLSMITH_TABLES, time_limit)\n",
+    "    clgen_table = get_outcomes_df_for_source(s, CLGEN_TABLES, time_limit) \n",
+    "    return outcomes_table.pd.concat((clsmith_table, clgen_table))\n",
+    "\n",
+    "with Session(commit=False) as s:\n",
+    "    clsmith_table = get_outcomes_df(s, CLSMITH_TABLES, 48 * 3600)\n",
+    "    clgen_table = get_outcomes_df(s, CLGEN_TABLES, 48 * 3600) \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "outcomes_table = pd.concat((clsmith_table, clgen_table))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'GeForce GTX 1080', '-', 1140, 0, 0, 149, 1506, 12837, 15632, 31117, 29, 0, 4014, 627, 26497, 62284]\n",
+      "[1, 'GeForce GTX 1080', '+', 1034, 0, 71, 203, 1232, 11553, 14093, 29775, 20, 2, 3435, 472, 23943, 57647]\n",
+      "[2, 'GeForce GTX 780', '-', 1273, 0, 0, 108, 1887, 14985, 18253, 43637, 27, 0, 5822, 916, 36756, 87158]\n",
+      "[2, 'GeForce GTX 780', '+', 1211, 26, 14, 56, 1792, 14598, 17697, 41045, 32, 1, 5315, 935, 35381, 82709]\n",
+      "[3, 'Intel HD Haswell GT2', '-', 451, 2717, 2480, 5, 0, 679, 6332, 69325, 574, 200, 7677, 0, 59989, 137765]\n",
+      "[3, 'Intel HD Haswell GT2', '+', 439, 2646, 2475, 11, 0, 628, 6199, 68514, 569, 200, 7591, 0, 59340, 136214]\n",
+      "[4, 'Intel E5-2620 v4', '-', 2658, 0, 27, 553, 1718, 12567, 17523, 49430, 57, 0, 9919, 823, 48485, 108714]\n",
+      "[4, 'Intel E5-2620 v4', '+', 2878, 487, 87, 688, 1329, 13585, 19054, 51583, 320, 150, 10533, 556, 51362, 114504]\n",
+      "[5, 'Intel E5-2650 v2', '-', 1245, 0, 11, 592, 1756, 14294, 17898, 44819, 152, 2, 7016, 552, 38495, 91036]\n",
+      "[5, 'Intel E5-2650 v2', '+', 1039, 112, 175, 317, 1347, 11923, 14913, 44318, 170, 117, 6927, 402, 38834, 90768]\n",
+      "[6, 'Intel i5-4570', '-', 2797, 0, 13, 630, 1808, 13169, 18417, 54949, 73, 0, 9223, 809, 46271, 111325]\n",
+      "[6, 'Intel i5-4570', '+', 3184, 524, 64, 839, 1467, 14913, 20991, 57540, 318, 140, 9739, 549, 49231, 117517]\n",
+      "[7, 'Intel Xeon Phi', '-', 930, 4, 84, 225, 1341, 10777, 13361, 17594, 71, 4, 2173, 579, 16676, 37097]\n",
+      "[7, 'Intel Xeon Phi', '+', 334, 42, 1474, 10, 294, 2622, 4776, 17825, 77, 50, 2201, 478, 16864, 37495]\n",
+      "[8, 'POCL (Intel E5-2620)', '-', 2612, 0, 0, 2084, 3164, 28080, 35940, 73148, 108, 2, 21540, 936, 75272, 171006]\n",
+      "[8, 'POCL (Intel E5-2620)', '+', 2066, 0, 6, 314, 3244, 22542, 28172, 69452, 92, 0, 20210, 696, 72460, 162910]\n",
+      "[9, 'ComputeAorta (Intel E5-2620)', '-', 1138, 0, 0, 25, 2052, 15278, 18493, 55082, 51, 0, 10070, 654, 46597, 112454]\n",
+      "[9, 'ComputeAorta (Intel E5-2620)', '+', 1231, 0, 0, 562, 1887, 15272, 18952, 56442, 59, 0, 9744, 607, 48748, 115600]\n",
+      "[10, 'Oclgrind Simulator', '-', 383, 0, 0, 10, 555, 4339, 5287, 33353, 2012, 0, 4323, 1529, 32612, 73829]\n",
+      "[10, 'Oclgrind Simulator', '+', 379, 0, 0, 10, 554, 4391, 5334, 36141, 2259, 0, 4630, 1438, 35205, 79673]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_outcomes_row(df: pd.DataFrame, num: int, opt: int):\n",
+    "    opt_label = \"+\" if opt else \"-\"\n",
+    "    device = df[df[\"num\"] == num][\"device\"].values[0]\n",
+    "    devname = device_str(device)\n",
+    "\n",
+    "    outcomes = {}\n",
+    "    for source in [\"CLSmith\", \"CLgen\"]:\n",
+    "        outcomes[source] = []\n",
+    "        for outcome_name, outcome in sorted(OUTCOMES_TO_INT.items(), key=lambda x: x[1]):\n",
+    "            count = df[\n",
+    "                (df[\"num\"] == num) & \n",
+    "                (df[\"optimizations\"] == opt) & \n",
+    "                (df[\"outcome\"] == outcome) & \n",
+    "                (df[\"source\"] == source)][\"count\"]\n",
+    "            outcomes[source].append(0 if count.empty else count.values[0])\n",
+    "        outcomes[source].append(sum(outcomes[source]))\n",
+    "\n",
+    "    row = [num, devname, opt_label] + outcomes[\"CLSmith\"] + outcomes[\"CLgen\"]\n",
+    "    print(row)\n",
+    "\n",
+    "def get_foo()\n",
+    "for num in sorted(set(outcomes_table[\"num\"].values)):\n",
+    "    get_outcomes_row(outcomes_table, num, 0)\n",
+    "    get_outcomes_row(outcomes_table, num, 1)"
+   ]
   },
   {
    "cell_type": "code",
