--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1Kcached now (2017-08-04 14:33:40.407622)27164 time: 81.7 hrshrsrs9 hrshrss\n"
+      "\u001b[1KCLgen Oclgrind Simulator opt results: 133602 time: 81.7 hrshrsrs9 hrshrsscached now (2017-08-04 21:45:53.473059)\n"
      ]
     },
     {
@@ -128,7 +128,7 @@
        "      <td>20002</td>\n",
        "      <td>320048</td>\n",
        "      <td>88.9h</td>\n",
-       "      <td>113331</td>\n",
+       "      <td>118883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -140,7 +140,7 @@
        "      <td>20002</td>\n",
        "      <td>326273</td>\n",
        "      <td>90.6h</td>\n",
-       "      <td>109417</td>\n",
+       "      <td>115435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -272,7 +272,7 @@
        "      <td>20657</td>\n",
        "      <td>283707</td>\n",
        "      <td>78.8h</td>\n",
-       "      <td>62844</td>\n",
+       "      <td>64012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -284,7 +284,7 @@
        "      <td>12867</td>\n",
        "      <td>308461</td>\n",
        "      <td>85.7h</td>\n",
-       "      <td>68934</td>\n",
+       "      <td>69974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -344,7 +344,7 @@
        "      <td>21000</td>\n",
        "      <td>316100</td>\n",
        "      <td>87.8h</td>\n",
-       "      <td>123816</td>\n",
+       "      <td>131275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -356,7 +356,7 @@
        "      <td>21000</td>\n",
        "      <td>294237</td>\n",
        "      <td>81.7h</td>\n",
-       "      <td>127164</td>\n",
+       "      <td>133602</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -408,8 +408,8 @@
        "19             201.5h            21000      294237            81.7h   \n",
        "\n",
        "    CLgen results  \n",
-       "0          113331  \n",
-       "1          109417  \n",
+       "0          118883  \n",
+       "1          115435  \n",
        "2          152573  \n",
        "3          152572  \n",
        "4          152573  \n",
@@ -420,17 +420,17 @@
        "9          152572  \n",
        "10         152573  \n",
        "11         152572  \n",
-       "12          62844  \n",
-       "13          68934  \n",
+       "12          64012  \n",
+       "13          69974  \n",
        "14         152573  \n",
        "15         152572  \n",
        "16         152573  \n",
        "17         152572  \n",
-       "18         123816  \n",
-       "19         127164  "
+       "18         131275  \n",
+       "19         133602  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,43 +696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "removed '../data/difftest/testbeds.csv'\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!rm -vf ../data/difftest/testbeds.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cached now (2017-08-04 14:47:03.367539)\n",
       "Current branch master is up to date.\n",
-      "[master 25bb7c2] auto: build/tab/platforms.tex\n",
-      " 1 file changed, 6 insertions(+), 6 deletions(-)\n",
-      "Counting objects: 5, done.\n",
-      "Delta compression using up to 16 threads.\n",
-      "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (5/5), 475 bytes | 0 bytes/s, done.\n",
-      "Total 5 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3)\u001b[K\u001b[K\n",
-      "remote: Updating references: 100% (1/1)\u001b[K\u001b[K\n",
-      "To https://git.overleaf.com/8608915dsywxshwwjmw\n",
-      "   d3da34f..25bb7c2  master -> master\n"
+      "On branch master\n",
+      "Your branch is up-to-date with 'origin/master'.\n",
+      "nothing to commit, working directory clean\n"
      ]
     },
     {
@@ -776,7 +750,7 @@
        "      <td>1.2</td>\n",
        "      <td>openSUSE  13.1 64bit</td>\n",
        "      <td>GPU</td>\n",
-       "      <td>168 hours</td>\n",
+       "      <td>169 hours</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -880,21 +854,21 @@
        "</div>"
       ],
       "text/plain": [
-       "   #.              Platform                        Device    Driver  OpenCL  \\\n",
-       "0   1           NVIDIA CUDA              GeForce GTX 1080    375.39     1.2   \n",
-       "1   2           NVIDIA CUDA               GeForce GTX 780    361.42     1.2   \n",
-       "2   3  Intel Gen OCL Driver          Intel HD Haswell GT2       1.3     1.2   \n",
-       "3   4          Intel OpenCL              Intel E5-2620 v4  1.2.0.25     2.0   \n",
-       "4   5          Intel OpenCL              Intel E5-2650 v2  1.2.0.44     1.2   \n",
-       "5   6          Intel OpenCL                 Intel i5-4570  1.2.0.25     1.2   \n",
-       "6   7          Intel OpenCL                Intel Xeon Phi       1.2     1.2   \n",
-       "7   8                  POCL          POCL (Intel E5-2620)      0.14     2.0   \n",
-       "8   9          ComputeAorta  ComputeAorta (Intel E5-2620)      1.14     1.2   \n",
-       "9  10              Oclgrind            Oclgrind Simulator     16.10     1.2   \n",
+       "   #.              Platform                        Device    Driver OpenCL  \\\n",
+       "0   1           NVIDIA CUDA              GeForce GTX 1080    375.39    1.2   \n",
+       "1   2           NVIDIA CUDA               GeForce GTX 780    361.42    1.2   \n",
+       "2   3  Intel Gen OCL Driver          Intel HD Haswell GT2       1.3    1.2   \n",
+       "3   4          Intel OpenCL              Intel E5-2620 v4  1.2.0.25    2.0   \n",
+       "4   5          Intel OpenCL              Intel E5-2650 v2  1.2.0.44    1.2   \n",
+       "5   6          Intel OpenCL                 Intel i5-4570  1.2.0.25    1.2   \n",
+       "6   7          Intel OpenCL                Intel Xeon Phi       1.2    1.2   \n",
+       "7   8                  POCL          POCL (Intel E5-2620)      0.14    2.0   \n",
+       "8   9          ComputeAorta  ComputeAorta (Intel E5-2620)      1.14    1.2   \n",
+       "9  10              Oclgrind            Oclgrind Simulator     16.10    1.2   \n",
        "\n",
        "       Operating system  Device type Testing time  B.R. Submitted  \n",
        "0    Ubuntu 16.04 64bit          GPU    187 hours               8  \n",
-       "1  openSUSE  13.1 64bit          GPU    168 hours               0  \n",
+       "1  openSUSE  13.1 64bit          GPU    169 hours               0  \n",
        "2    Ubuntu 16.04 64bit          GPU    108 hours              12  \n",
        "3    Ubuntu 16.04 64bit          CPU    129 hours               6  \n",
        "4      CentOS 7.1 64bit          CPU    173 hours               1  \n",
@@ -905,13 +879,17 @@
        "9    Ubuntu 16.04 64bit     Emulator    174 hours               5  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "total_time, total_submitted = 0, 0\n",
+    "\n",
     "def get_platform_stats(s, testbed: Testbed):\n",
+    "    global total_time\n",
+    "    global total_submitted\n",
     "    num_submitted = s.query(sql.sql.func.count(BugReport.id))\\\n",
     "        .filter(BugReport.testbed_id == testbed.id).scalar() or 0\n",
     "\n",
@@ -929,6 +907,9 @@
     "\n",
     "    testing_time = clgen_time + reduction_time + other_runtimes\n",
     "\n",
+    "    total_time += testing_time\n",
+    "    total_submitted += num_submitted\n",
+    "    \n",
     "    return testing_time, num_submitted\n",
     "\n",
     "\n",
@@ -949,18 +930,10 @@
     "\n",
     "\n",
     "def get_testbeds_table():\n",
-    "    cachepath = \"../data/difftest/testbeds.csv\"\n",
-    "    \n",
-    "    if fs.exists(cachepath):\n",
-    "        print(\"cached\", cache_time(cachepath))\n",
-    "        return pd.read_csv(cachepath, dtype={\"B.R. Submitted\": np.int32})\n",
-    "    else:\n",
-    "        rows = []\n",
-    "        with Session(commit=False) as s:\n",
-    "            rows += [get_row(s, *x) for x in CONFIGURATIONS]\n",
-    "        table = pd.DataFrame(rows)\n",
-    "        table.to_csv(cachepath, index=False)\n",
-    "        return get_testbeds_table()\n",
+    "    rows = []\n",
+    "    with Session(commit=False) as s:\n",
+    "        rows += [get_row(s, *x) for x in CONFIGURATIONS]\n",
+    "    return pd.DataFrame(rows)\n",
     "\n",
     "testbeds_table = get_testbeds_table()\n",
     "\n",
@@ -981,6 +954,26 @@
     "\n",
     "!cd ~/docs/paper-project_b/build && git add . && git commit -m \"auto: build/tab/platforms.tex\" && git push\n",
     "testbeds_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total testing time: 1553.2\n",
+      "Total submitted: 63\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_hours = total_time / 3600\n",
+    "print(f\"Total testing time: {total_hours:.1f}\")\n",
+    "print(f\"Total submitted: {total_submitted}\")"
    ]
   },
   {
@@ -1647,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
@@ -1666,88 +1659,38 @@
     "GROUP BY num, device, outcome, optimizations\n",
     "ORDER BY num, outcome, optimizations;\n",
     "\"\"\")\n",
-    "    return pd.DataFrame([[tables.name] + list(row) for row in q], \n",
+    "    return pd.DataFrame([[tables.name] + list(row) for row in q],\n",
     "                        columns=[\"source\", \"num\", \"device\", \"optimizations\", \"outcome\", \"count\"])\n",
+    "\n",
     "\n",
     "def get_outcomes_df(s: session_t, time_limit: int):\n",
     "    clsmith_table = get_outcomes_df_for_source(s, CLSMITH_TABLES, time_limit)\n",
-    "    clgen_table = get_outcomes_df_for_source(s, CLGEN_TABLES, time_limit) \n",
-    "    return outcomes_table.pd.concat((clsmith_table, clgen_table))\n",
+    "    clgen_table = get_outcomes_df_for_source(s, CLGEN_TABLES, time_limit)\n",
+    "    return pd.concat((clsmith_table, clgen_table))\n",
     "\n",
-    "with Session(commit=False) as s:\n",
-    "    clsmith_table = get_outcomes_df(s, CLSMITH_TABLES, 48 * 3600)\n",
-    "    clgen_table = get_outcomes_df(s, CLGEN_TABLES, 48 * 3600) \n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "outcomes_table = pd.concat((clsmith_table, clgen_table))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 'GeForce GTX 1080', '-', 1140, 0, 0, 149, 1506, 12837, 15632, 31117, 29, 0, 4014, 627, 26497, 62284]\n",
-      "[1, 'GeForce GTX 1080', '+', 1034, 0, 71, 203, 1232, 11553, 14093, 29775, 20, 2, 3435, 472, 23943, 57647]\n",
-      "[2, 'GeForce GTX 780', '-', 1273, 0, 0, 108, 1887, 14985, 18253, 43637, 27, 0, 5822, 916, 36756, 87158]\n",
-      "[2, 'GeForce GTX 780', '+', 1211, 26, 14, 56, 1792, 14598, 17697, 41045, 32, 1, 5315, 935, 35381, 82709]\n",
-      "[3, 'Intel HD Haswell GT2', '-', 451, 2717, 2480, 5, 0, 679, 6332, 69325, 574, 200, 7677, 0, 59989, 137765]\n",
-      "[3, 'Intel HD Haswell GT2', '+', 439, 2646, 2475, 11, 0, 628, 6199, 68514, 569, 200, 7591, 0, 59340, 136214]\n",
-      "[4, 'Intel E5-2620 v4', '-', 2658, 0, 27, 553, 1718, 12567, 17523, 49430, 57, 0, 9919, 823, 48485, 108714]\n",
-      "[4, 'Intel E5-2620 v4', '+', 2878, 487, 87, 688, 1329, 13585, 19054, 51583, 320, 150, 10533, 556, 51362, 114504]\n",
-      "[5, 'Intel E5-2650 v2', '-', 1245, 0, 11, 592, 1756, 14294, 17898, 44819, 152, 2, 7016, 552, 38495, 91036]\n",
-      "[5, 'Intel E5-2650 v2', '+', 1039, 112, 175, 317, 1347, 11923, 14913, 44318, 170, 117, 6927, 402, 38834, 90768]\n",
-      "[6, 'Intel i5-4570', '-', 2797, 0, 13, 630, 1808, 13169, 18417, 54949, 73, 0, 9223, 809, 46271, 111325]\n",
-      "[6, 'Intel i5-4570', '+', 3184, 524, 64, 839, 1467, 14913, 20991, 57540, 318, 140, 9739, 549, 49231, 117517]\n",
-      "[7, 'Intel Xeon Phi', '-', 930, 4, 84, 225, 1341, 10777, 13361, 17594, 71, 4, 2173, 579, 16676, 37097]\n",
-      "[7, 'Intel Xeon Phi', '+', 334, 42, 1474, 10, 294, 2622, 4776, 17825, 77, 50, 2201, 478, 16864, 37495]\n",
-      "[8, 'POCL (Intel E5-2620)', '-', 2612, 0, 0, 2084, 3164, 28080, 35940, 73148, 108, 2, 21540, 936, 75272, 171006]\n",
-      "[8, 'POCL (Intel E5-2620)', '+', 2066, 0, 6, 314, 3244, 22542, 28172, 69452, 92, 0, 20210, 696, 72460, 162910]\n",
-      "[9, 'ComputeAorta (Intel E5-2620)', '-', 1138, 0, 0, 25, 2052, 15278, 18493, 55082, 51, 0, 10070, 654, 46597, 112454]\n",
-      "[9, 'ComputeAorta (Intel E5-2620)', '+', 1231, 0, 0, 562, 1887, 15272, 18952, 56442, 59, 0, 9744, 607, 48748, 115600]\n",
-      "[10, 'Oclgrind Simulator', '-', 383, 0, 0, 10, 555, 4339, 5287, 33353, 2012, 0, 4323, 1529, 32612, 73829]\n",
-      "[10, 'Oclgrind Simulator', '+', 379, 0, 0, 10, 554, 4391, 5334, 36141, 2259, 0, 4630, 1438, 35205, 79673]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def get_outcomes_row(df: pd.DataFrame, num: int, opt: int):\n",
-    "    opt_label = \"+\" if opt else \"-\"\n",
-    "    device = df[df[\"num\"] == num][\"device\"].values[0]\n",
-    "    devname = device_str(device)\n",
     "\n",
-    "    outcomes = {}\n",
-    "    for source in [\"CLSmith\", \"CLgen\"]:\n",
-    "        outcomes[source] = []\n",
-    "        for outcome_name, outcome in sorted(OUTCOMES_TO_INT.items(), key=lambda x: x[1]):\n",
-    "            count = df[\n",
-    "                (df[\"num\"] == num) & \n",
-    "                (df[\"optimizations\"] == opt) & \n",
-    "                (df[\"outcome\"] == outcome) & \n",
-    "                (df[\"source\"] == source)][\"count\"]\n",
-    "            outcomes[source].append(0 if count.empty else count.values[0])\n",
-    "        outcomes[source].append(sum(outcomes[source]))\n",
+    "def get_classifications_df_for_source(s: session_t, tables: Tableset, time_limit: int):\n",
+    "    q = s.execute(f\"\"\"\n",
+    "SELECT num, device, optimizations, classification, COUNT(*)\n",
+    "FROM {tables.results.__tablename__} results\n",
+    "INNER JOIN {tables.classifications} classifications ON results.id = classifications.id\n",
+    "INNER JOIN {tables.meta.__tablename__} meta ON results.id = meta.id\n",
+    "INNER JOIN {tables.testcases.__tablename__} testcases ON results.testcase_id = testcases.id\n",
+    "INNER JOIN {tables.params.__tablename__} params ON testcases.params_id = params.id\n",
+    "INNER JOIN Configurations ON results.testbed_id = Configurations.id\n",
+    "INNER JOIN Testbeds ON results.testbed_id = Testbeds.id\n",
+    "WHERE cumtime < {time_limit}\n",
+    "GROUP BY num, device, classification, optimizations\n",
+    "ORDER BY num, classification, optimizations;\n",
+    "\"\"\")\n",
+    "    return pd.DataFrame([[tables.name] + list(row) for row in q],\n",
+    "                        columns=[\"source\", \"num\", \"device\", \"optimizations\", \"classification\", \"count\"])\n",
     "\n",
-    "    row = [num, devname, opt_label] + outcomes[\"CLSmith\"] + outcomes[\"CLgen\"]\n",
-    "    print(row)\n",
     "\n",
-    "def get_foo()\n",
-    "for num in sorted(set(outcomes_table[\"num\"].values)):\n",
-    "    get_outcomes_row(outcomes_table, num, 0)\n",
-    "    get_outcomes_row(outcomes_table, num, 1)"
+    "def get_classifications_df(s: session_t, time_limit: int):\n",
+    "    clsmith_table = get_classifications_df_for_source(s, CLSMITH_TABLES, time_limit)\n",
+    "    clgen_table = get_classifications_df_for_source(s, CLGEN_TABLES, time_limit)\n",
+    "    return pd.concat((clsmith_table, clgen_table))"
    ]
   },
   {
